# nightscout-widget-tauri

./: .gitignore
src/: settings.html  styles.css  widget.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/js/: ipc.js  settings.js  util.js  widget.js
