[package]
name = "Owlet"
version = "1.0.0-alpha"
description = "A widget application to show on a desktop blood glucose value is getting from Nightscout API. Clone of the nightscout-widget-electron based on the Tauri platform." 
authors = ["Dmitry Burnyshev"]
license = "GPL-3.0"
repository = "https://github.com/kashamalasha/nightscout-widget-tauri"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-set-position", "window-hide", "window-close", "window-start-dragging", "macos-private-api", "shell-open", "window-set-always-on-top"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
